--- a/ansible/roles/PV_CREATION/templates/create_nfs_pv_directories.sh.j2
+++ b/ansible/roles/PV_CREATION/templates/create_nfs_pv_directories.sh.j2
@@ -1,8 +1,11 @@
 #!/bin/bash
+
+test -f /root/openshift-uservols.exports && rm /root/openshift-uservols.exports
+
 mkdir -p /srv/nfs/user-vols/pv{1..50}
 
-for pvnum in {1..50}; do echo "/srv/nfs/user-vols/pv${pvnum} *(rw,root_squash)" >> openshift-uservols.exports; done
-sudo cp ./openshift-uservols.exports /etc/exports.d/
+for pvnum in {1..50}; do echo "/srv/nfs/user-vols/pv${pvnum} *(rw,root_squash)" >> /root/openshift-uservols.exports; done
+sudo cp /root/openshift-uservols.exports /etc/exports.d/
 chown -R nfsnobody.nfsnobody /srv/nfs
 chmod -R 777 /srv/nfs
 
