fix typo in script

--- a/ansible/roles/CICD/templates/setup_cicd_simple.sh.j2
+++ b/ansible/roles/CICD/templates/setup_cicd_simple.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-readonly PROJECTS=(cicd-devi tasks-dev tasks-test tasks-prod)
+readonly PROJECTS=(cicd-dev tasks-dev tasks-test tasks-prod)
 
 # create projects
 for _project in ${PROJECTS[@]}
